# modern-cpp-challenges

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  environment.yml  vcpkg.json
.github/workflows/: linux.yml.disable  macos.yml.disable  windows.yml.disable
benchmark/: CMakeLists.txt
benchmark/1_1/: CMakeLists.txt  main.cpp
benchmark/1_2/: CMakeLists.txt  main.cpp
benchmark/1_3/: .clang-tidy  CMakeLists.txt  main.cpp
cmake/: CMakeLists.txt  longlp_desired_compile_features.cmake  longlp_desired_compile_options.cmake
src/: .clang-tidy  CMakeLists.txt
src/chapter_1/: CMakeLists.txt
src/chapter_1/problem_1/: .clang-tidy  CMakeLists.txt  main.cpp
src/math_problems/1_1/: CMakeLists.txt  main.cpp  solution.cpp  solution.hpp
src/problems/1_1/: CMakeLists.txt  main.cpp  solution.cpp  solution.hpp  solution_unittest.cpp
src/problems/1_2/: .clang-tidy  CMakeLists.txt  solution.cpp  solution.hpp  solution_unittest.cpp
src/problems/1_3/: CMakeLists.txt  solution.cpp  solution.hpp  solution_unittest.cpp
test/: .clang-tidy  CMakeLists.txt  doctest_main.cpp  main.cpp
test/math_problems/1_1/: solution_unittest.cpp
tools/: settings.json.example
tools/benchmark-compare/: compare.py
tools/vscode/: c_cpp_properties.json  settings.json  settings.json.example  snippets.code-snippets  snippets.code-snippets.example
