add_executable(1_1)
target_sources(1_1 PRIVATE main.cpp solution.hpp solution.cpp ${LONGLP_PROJECT_SRC_DIR})
target_compile_options(1_1 PRIVATE ${LONGLP_DESIRED_COMPILE_OPTIONS})
target_compile_features(1_1 PRIVATE ${LONGLP_DESIRED_COMPILE_FEATURES})
target_include_directories(1_1 PRIVATE ${LONGLP_PROJECT_SRC_DIR})
target_link_libraries(1_1 PRIVATE benchmark::benchmark)
