add_library(1_3_solution OBJECT solution.hpp solution.cpp)
target_compile_options(1_3_solution PRIVATE ${LONGLP_DESIRED_COMPILE_OPTIONS})
target_compile_features(1_3_solution PRIVATE ${LONGLP_DESIRED_COMPILE_FEATURES})
target_include_directories(1_3_solution PRIVATE ${LONGLP_PROJECT_SRC_DIR})
target_link_libraries(1_3_solution PRIVATE 1_2_solution)
